--- a/src/package.json
+++ b/src/package.json
@@ -8,7 +8,8 @@
     "socket.io": "^1.4.5"
   },
   "devDependencies": {
-    "express": "^4.13.4"
+    "express": "^4.13.4",
+    "underscore": "^1.8.3"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
