--- a/src/package.json
+++ b/src/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "dir": "^0.1.2",
     "jslint": "^0.10.1",
+    "mongoose": "^4.5.1",
     "socket.io": "^1.4.5"
   },
   "devDependencies": {
