--- a/src/package.json
+++ b/src/package.json
@@ -4,10 +4,12 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "body-parser": "^1.15.2",
     "cors": "^2.7.1",
     "dir": "^0.1.2",
     "jslint": "^0.10.1",
     "mongoose": "^4.5.1",
+    "mongoose-currency": "^0.2.0",
     "socket.io": "^1.4.5"
   },
   "devDependencies": {
