--- a/src/package.json
+++ b/src/package.json
@@ -7,6 +7,7 @@
     "body-parser": "^1.15.2",
     "cors": "^2.7.1",
     "dir": "^0.1.2",
+    "gulp": "^3.9.1",
     "jslint": "^0.10.1",
     "jsonwebtoken": "^7.0.1",
     "mongoose": "^4.5.1",
