--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "cors": "^2.7.1",
     "dir": "^0.1.2",
     "gulp": "^3.9.1",
+    "gulp-autoprefixer": "^3.1.0",
+    "gulp-sass": "^2.3.2",
     "jslint": "^0.10.1",
     "jsonwebtoken": "^7.0.1",
     "mongoose": "^4.5.1",
