--- a/package.json
+++ b/package.json
@@ -5,11 +5,14 @@
   "main": "index.js",
   "dependencies": {
     "body-parser": "^1.15.2",
+    "browser-sync": "^2.13.0",
     "cors": "^2.7.1",
     "dir": "^0.1.2",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.0",
+    "gulp-nodemon": "^2.1.0",
     "gulp-sass": "^2.3.2",
+    "gulp-watch": "^4.3.8",
     "jslint": "^0.10.1",
     "jsonwebtoken": "^7.0.1",
     "mongoose": "^4.5.1",
