--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
   "dependencies": {
     "body-parser": "^1.15.2",
     "browser-sync": "^2.13.0",
+    "buster-amd": "^0.3.1",
     "cors": "^2.7.1",
     "dir": "^0.1.2",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.0",
+    "gulp-jasmine": "^2.4.0",
     "gulp-nodemon": "^2.1.0",
     "gulp-sass": "^2.3.2",
     "gulp-watch": "^4.3.8",
@@ -28,7 +30,7 @@
     "underscore": "^1.8.3"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "no test specified"
   },
   "author": "",
   "license": "ISC"
